iml-services/iml-device/tests/snapshots/integration_tests__insert.snap
---
source: iml-services/iml-device/tests/integration_tests.rs
expression: xs
---
[
  {
    "id": "<ID>",
    "state_modified_at": "<STATE_MODIFIED_AT>",
    "state": "mounted",
    "immutable_state": false,
    "not_deleted": true,
    "content_type_id": 41,
    "filesystem": "fs0a9c",
    "host_id": 6,
    "mountpoints": [
      "/mnt/fs0a9c",
      "/mnt/fs0a9c2"
    ]
  }
]
